Fri Jul  1 16:13:57 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.h:
        * tools/dissector/giop_base.cpp:
        * tools/dissector/packet-datawriter.cpp:
        * tools/dissector/packet-repo.h:
        * tools/dissector/packet-repo.cpp:

          Another incremental patch. I found a bug in the giop dissector
          from wireshark, it was not setting the request ID in the header
          information passed to a sub-dissector. The request ID is
          necessary for correlating information in replies to information
          in requests. Fortunately there is a fairly simple work-around.

Fri Jul  1 14:17:24 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/Arrays/run_test.pl:
        * tools/modeling/tests/CfTopic/run_test.pl:
        * tools/modeling/tests/Chained_Topic/run_test.pl:
        * tools/modeling/tests/Codegen/run_test.pl:
        * tools/modeling/tests/Comments/run_test.pl:
        * tools/modeling/tests/CompositeKey/run_test.pl:
        * tools/modeling/tests/CopyTopicQos/run_test.pl:
        * tools/modeling/tests/DataLibRef/run_test.pl:
        * tools/modeling/tests/Deep/Down/Reference/run_test.pl:
        * tools/modeling/tests/DomainZero/run_test.pl:
        * tools/modeling/tests/EmptyLibs/run_test.pl:
        * tools/modeling/tests/Exchange/run_test.pl:
        * tools/modeling/tests/ExternalPolicies/run_test.pl:
        * tools/modeling/tests/InvalidNames/run_test.pl:
        * tools/modeling/tests/Looped/run_test.pl:
        * tools/modeling/tests/Messenger/run_test.pl:
        * tools/modeling/tests/MessengerDpQos/run_test.pl:
        * tools/modeling/tests/MessengerGlobalNs/run_test.pl:
        * tools/modeling/tests/MessengerMC/run_test.pl:
        * tools/modeling/tests/MessengerMixed/run_test.pl:
        * tools/modeling/tests/MessengerMulti/run_test.pl:
        * tools/modeling/tests/MessengerNoPub/run_test.pl: