@@ -1,3 +1,12 @@
+Fri Jul  1 20:00:41 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tools/dissector/packet-datawriter.cpp:
+        * tools/dissector/packet-repo.h:
+        * tools/dissector/packet-repo.cpp:
+
+          Fixed use of a non-portable type name as discovered by Adam.
+          Added some more debugging output.
+
 Fri Jul  1 16:13:57 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tools/dissector/giop_base.h:
